--- a/webStudy01/WebContent/01aaaaaaaaaaaaaaaaa/gugudanForm.html
+++ b/webStudy01/WebContent/01aaaaaaaaaaaaaaaaa/gugudanForm.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>01/gugudanForm.html</title>
-</head>
-<body>
-<form action="../gugudan.do" method="get">
+<!-- <form action="../gugudan.do" method="get"> -->
+<form  method="get"><!-- action="./" -->
 최소단 : <input type="number" name="minDan"/>
 최대단 : <input type="number" name="maxDan"/>
 <input type="submit" value="전송"/>
 <input type="button" value="버튼"/>
-
+<input type="hidden" value="gugudanProcess" name="command"/>
 </form>
-</body>
-</html>
